manifests/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: common
