manifests/basic_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: basic-pod
  namespace: common
spec:
  containers:
  - image: alpine:edge
    command:
    - "tail"
    - "-f"
    - "/dev/null"
    imagePullPolicy: IfNotPresent
    name: basic-pod
  restartPolicy: Always
  dnsPolicy: ClusterFirstWithHostNet
