manifests/conformance.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conformance

---
apiVersion: v1
kind: Pod
metadata:
  name: e2e-producer-consumer-test
  namespace: conformance
spec:
  serviceAccountName: conformance
  containers:
  - name: conformance-container
    image: gcr.io/heptio-images/kube-conformance:latest
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: output-volume
      mountPath: /tmp/results
  volumes:
  - name: output-volume
    hostPath:
      path: /tmp/results
  restartPolicy: Never
