manifests/kube-proxy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    k8s-app: kube-proxy
  name: kube-proxy
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: kube-proxy
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 10%
  template:
    metadata:
      labels:
        k8s-app: kube-proxy
    spec:
      priorityClassName: system-node-critical
      hostNetwork: true
      serviceAccountName: kube-proxy
      tolerations:
      - operator: "Exists"
        effect: "NoExecute"
      - operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: kube-proxy
        imagePullPolicy: Always
        image: ghcr.io/randomcoww/kubernetes:kube-proxy-v1.22.4
        command:
        - kube-proxy
        - "--config=/etc/kube-proxy/kube-proxy-config.yaml"
        - "--v=2"
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /run/xtables.lock
          name: xtables-lock
        - mountPath: /lib/modules
          name: lib-modules
          readOnly: true
        - name: kube-proxy-config
          mountPath: /etc/kube-proxy/
        livenessProbe:
          httpGet:
            scheme: HTTP
            host: 127.0.0.1
            port: 50254
            path: "/healthz"
          initialDelaySeconds: 15
          timeoutSeconds: 15
      volumes:
      - name: xtables-lock
        hostPath:
          path: /run/xtables.lock
          type: FileOrCreate
      - name: lib-modules
        hostPath:
          path: /lib/modules
      - name: kube-proxy-config
        configMap:
          name: kube-proxy-config
