manifests/mpd-s3-pv.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: mpd-s3-vol
spec:
  selector:
    matchLabels:
      app: mpd-s3-vol
  template:
    metadata:
      labels:
        app: mpd-s3-vol
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      # Mount fuse in mnt under base path so that client container
      # can verify that it is mounted before starting
      volumes:
      - name: mpd-s3-vol
        hostPath:
          path: /hostpath/mpd/mnt
          type: DirectoryOrCreate
      containers:
      - name: rclone
        imagePullPolicy: Always
        image: randomcoww/rclone:v1.50.2
        securityContext:
          privileged: true
        args:
        - "mount"
        - ":s3:mpd/"
        - "/vol"
        - "--s3-provider=Minio"
        - "--s3-env-auth=true"
        - "--s3-region="
        - "--s3-endpoint=http://minio.default.svc.cluster.local:9000"
        - "--allow-other"
        - "--vfs-cache-mode=full"
        - "--no-modtime"
        volumeMounts:
        - name: mpd-s3-vol
          mountPath: /vol
          mountPropagation: Bidirectional
