manifests/music-rclone-pv.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: music-rclone-vol
spec:
  selector:
    matchLabels:
      app: music-rclone-vol
  template:
    metadata:
      labels:
        app: music-rclone-vol
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      volumes:
      - name: music-rclone-vol
        hostPath:
          path: /hostpath/music
          type: DirectoryOrCreate
      containers:
      - name: rclone
        imagePullPolicy: Always
        image: randomcoww/rclone:v1.50.1
        securityContext:
          privileged: true
        args:
        - "mount"
        - ":s3:music/"
        - "/vol"
        - "--s3-provider=Minio"
        - "--s3-env-auth=true"
        - "--s3-region="
        - "--s3-endpoint=http://minio.default.svc.cluster.local:9000"
        - "--allow-other"
        - "--vfs-cache-mode=minimal"
        - "--no-modtime"
        volumeMounts:
        - name: music-rclone-vol
          mountPath: /vol
          mountPropagation: Bidirectional
