manifests/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: default
  labels:
    app: promtail
spec:
  selector:
    matchLabels:
      app: promtail
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: promtail
      annotations:
        prometheus.io/port: http-metrics
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: promtail
      containers:
      - name: promtail
        image: "grafana/promtail:latest"
        imagePullPolicy: Always
        args:
        - "-config.file=/etc/promtail/promtail.yaml"
        - "-client.url=http://loki:3100/loki/api/v1/push"
        volumeMounts:
        - name: config
          mountPath: /etc/promtail
        - name: run
          mountPath: /run/promtail
        - mountPath: /var/lib/containerd
          name: containerd
          readOnly: true
        - mountPath: /var/log/pods
          name: pods
          readOnly: true
        ports:
        - containerPort: 3101
          name: http-metrics
        securityContext:
          readOnlyRootFilesystem: true
          runAsGroup: 0
          runAsUser: 0
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      volumes:
      - name: config
        configMap:
          name: promtail
      - name: run
        hostPath:
          path: /run/promtail
      - hostPath:
          path: /pv/containers
        name: containerd
      - hostPath:
          path: /var/log/pods
        name: pods
