manifests/test-rclone.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rclone-test
spec:
  dnsPolicy: ClusterFirstWithHostNet
  containers:
  - name: rclone
    image: randomcoww/rclone:v1.51.0
    securityContext:
      privileged: true
    args:
    - "mount"
    - ":s3:music/"
    - "/vol/mnt"
    - "--s3-provider=Minio"
    - "--s3-env-auth=true"
    - "--s3-region="
    - "--s3-endpoint=http://minio-ui.default.svc.cluster.local"
    - "--allow-other"
    - "--vfs-cache-mode=minimal"
    - "--no-modtime"
    - "--read-only"
