manifests/unifi-tgt-pv.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: unifi-tgt
spec:
  selector:
    matchLabels:
      app: unifi-tgt
  template:
    metadata:
      labels:
        app: unifi-tgt
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
      - name: tgt-config
        configMap:
          name: unifi-tgt-config
      - name: unifi-tgt-vol
        emptyDir: {}
      containers:
      - name: gotgt
        image: randomcoww/gotgt:latest
        args:
        - daemon
        volumeMounts:
        - name: tgt-config
          mountPath: /root/.gotgt
        - name: unifi-tgt-vol
          mountPath: /vol
          mountPropagation: HostToContainer
        ports:
        - containerPort: 3260
      - name: s3backer
        securityContext:
          privileged: true
        image: randomcoww/s3backer:1.5.4
        args:
        - -d
        - --accessId=$(AWS_ACCESS_KEY_ID)
        - --accessKey=$(AWS_SECRET_ACCESS_KEY)
        - --baseURL=http://minio.default.svc.cluster.local:9000/"
        - --blockSize=128k 
        - --size=2g
        - --listBlocks
        - --force
        - unifi-block
        - /vol
        volumeMounts:
        - name: unifi-tgt-vol
          mountPath: /vol
          mountPropagation: Bidirectional
