manifests/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-headless
  namespace: default
  labels:
    app: loki
spec:
  clusterIP: None
  ports:
  - port: 3100
    protocol: TCP
    name: http-metrics
    targetPort: http-metrics
  selector:
    app: loki

---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.126.126"
  ports:
  - port: 3100
    protocol: TCP
    name: http-metrics
    targetPort: http-metrics
  selector:
    app: loki

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: default
  labels:
    app: loki
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: loki
  serviceName: loki-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: loki
        name: loki
      annotations:
        checksum/config: cedfd075878f52dd4a4e2533a43eee6dcf6be1b0759ae2398336da757be17c93
        prometheus.io/port: http-metrics
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: loki
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
      - name: loki
        image: "grafana/loki:v1.2.0"
        imagePullPolicy: IfNotPresent
        args:
        - "-config.file=/etc/loki/loki.yaml"
        volumeMounts:
        - name: config
          mountPath: /etc/loki
        - name: storage
          mountPath: "/data"
          subPath: 
        ports:
        - name: http-metrics
          containerPort: 3100
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 45
        readinessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 45
        securityContext:
          readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 4800
      volumes:
      - name: config
        secret:
          secretName: loki
      - name: storage
        emptyDir: {}
