manifests/unifi.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: unifi
  template:
    metadata:
      labels:
        k8s-app: unifi
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      containers:
      - name: unifi
        imagePullPolicy: Always
        image: randomcoww/unifi:5.12.22
        lifecycle:
          preStop:
            exec:
              command:
              - "/docker-stop.sh"
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 3478
          protocol: UDP
        volumeMounts:
        - mountPath: "/unifi"
          name: unifi-data
      volumes:
      - name: unifi-data
        persistentVolumeClaim:
          claimName: unifi-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi
    external-dns.alpha.kubernetes.io/hostname: unifi.fuzzybunny.internal
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
  - name: https
    port: 8443
  selector:
    k8s-app: unifi

---
kind: Service
apiVersion: v1
metadata:
  name: unifi-stun
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi
spec:
  type: LoadBalancer
  ports:
  - name: stun
    port: 3478
    protocol: UDP
  selector:
    k8s-app: unifi
