manifests/mpd.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: mpd
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: mpd
  template:
    metadata:
      labels:
        k8s-app: mpd
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: mpd
        image: randomcoww/mpd:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        - containerPort: 6600
          protocol: TCP
        volumeMounts:
        - mountPath: "/mpd/music"
          name: music-data
        - mountPath: "/mpd/cache"
          name: mpd-data
        - mountPath: /etc/mpd.conf
          name: mpd-config
          subPath: mpd.conf
      volumes:
      - name: music-data
        persistentVolumeClaim:
          claimName: music-pvc
      - name: mpd-data
        persistentVolumeClaim:
          claimName: mpd-pvc
      - name: mpd-config
        configMap:
          name: mpd-config

---
kind: Service
apiVersion: v1
metadata:
  name: mpd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mpd.fuzzybunny.internal
spec:
  type: LoadBalancer
  ports:
  - name: control
    port: 6600
    targetPort: 6600
  selector:
    k8s-app: mpd

---
kind: Service
apiVersion: v1
metadata:
  name: mpd-stream
spec:
  ports:
  - name: stream
    port: 80
    targetPort: 8000
  selector:
    k8s-app: mpd

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mpd-stream
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: stream.fuzzybunny.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: mpd-stream
          servicePort: stream
  tls:
  - secretName: internal-tls
