manifests/prometheus.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    component: "node-exporter"
    app: prometheus
    release: prometheus
  name: prometheus-node-exporter
spec:
  selector:
    matchLabels:
      component: "node-exporter"
      app: prometheus
      release: prometheus
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        component: "node-exporter"
        app: prometheus
        release: prometheus
    spec:
      containers:
      - name: prometheus-node-exporter
        image: "prom/node-exporter:v0.18.0"
        imagePullPolicy: "IfNotPresent"
        args:
        - --path.procfs=/host/proc
        - --path.sysfs=/host/sys
        ports:
        - name: metrics
          containerPort: 9100
          hostPort: 9100
        volumeMounts:
        - name: proc
          mountPath: /host/proc
          readOnly:  true
        - name: sys
          mountPath: /host/sys
          readOnly: true
      hostNetwork: true
      hostPID: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: "kube-state-metrics"
    app: prometheus
    release: prometheus
  name: prometheus-kube-state-metrics
spec:
  selector:
    matchLabels:
      component: "kube-state-metrics"
      app: prometheus
      release: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        component: "kube-state-metrics"
        app: prometheus
        release: prometheus
    spec:
      serviceAccountName: prometheus-kube-state-metrics
      containers:
      - name: prometheus-kube-state-metrics
        image: "quay.io/coreos/kube-state-metrics:v1.6.0"
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: metrics
          containerPort: 8080
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: "server"
    app: prometheus
    release: prometheus
  name: prometheus-server
spec:
  selector:
    matchLabels:
      component: "server"
      app: prometheus
      release: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        component: "server"
        app: prometheus
        release: prometheus
    spec:
      serviceAccountName: prometheus-server
      containers:
      - name: prometheus-server
        image: "prom/prometheus:v2.13.1"
        imagePullPolicy: "IfNotPresent"
        args:
        - --storage.tsdb.retention.time=2d
        - --config.file=/etc/config/prometheus.yml
        - --storage.tsdb.path=/data
        - --web.console.libraries=/etc/prometheus/console_libraries
        - --web.console.templates=/etc/prometheus/consoles
        - --web.enable-lifecycle
        ports:
        - containerPort: 9090
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        - name: storage-volume
          mountPath: /data
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      terminationGracePeriodSeconds: 300
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-server
      - name: storage-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    component: "kube-state-metrics"
    app: prometheus
    release: prometheus
  name: prometheus-kube-state-metrics
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    component: "kube-state-metrics"
    app: prometheus
    release: prometheus
  type: "ClusterIP"

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    component: "node-exporter"
    app: prometheus
    release: prometheus
  name: prometheus-node-exporter
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 9100
    protocol: TCP
    targetPort: 9100
  selector:
    component: "node-exporter"
    app: prometheus
    release: prometheus
  type: "ClusterIP"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "server"
    app: prometheus
    release: prometheus
  name: prometheus-server
spec:
  ports:
  - name: http
    name: web
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    component: "server"
    app: prometheus
    release: prometheus
  type: "ClusterIP"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: prometheus.fuzzybunny.internal
    http:
      paths:
      - path: /
        backend:
         serviceName: prometheus-server
         servicePort: web
  tls:
  - secretName: internal-tls
